--- a/TailwindCSS/src/index.html
+++ b/TailwindCSS/src/index.html
@@ -73,7 +73,7 @@
         </div>
       </nav>
     </header>
-    
+
     <main>   
       <!-- you can use different images if you want to -->
       <section class="section_images py-16">
@@ -85,7 +85,7 @@
           <div class="relative">
             <img
               src="./assets/images/furniture-1.jpg"
-              alt=""
+              alt="Furniture Image"
               class="w-full object-cover"
             />
             <!-- notice how i use semantic HTML in this div content -->
@@ -108,7 +108,7 @@
             <div class="relative">
               <img
                 src="./assets/images/furniture-2.jpg"
-                alt=""
+                alt="Furniture Image"
                 class="w-full h-full object-cover"
               />
               <div class="absolute top-7 left-7 flex flex-col gap-3">
@@ -140,7 +140,7 @@
               <div class="relative">
                 <img
                   src="./assets/images/furniture-3.jpg"
-                  alt=""
+                  alt="Furniture Image"
                   class="w-full h-full object-cover"
                 />
                 <div class="absolute top-7 left-7 flex flex-col gap-3">
@@ -158,7 +158,7 @@
               <div class="relative">
                 <img
                   src="./assets/images/furniture-4.jpg"
-                  alt=""
+                  alt="Furniture Image"
                   class="w-full h-full object-cover"
                 />
                 <div class="absolute top-7 left-7 flex flex-col gap-3">
