--- a/TailwindCSS/src/index.html
+++ b/TailwindCSS/src/index.html
@@ -6,6 +6,7 @@
     <link href="../dist/output.css" rel="stylesheet" />
   </head>
   <body>
+    <!-- Your task is to make this website responsive from large screen to mobile screens using tailwind CSS NO custom media queries -->
     <header>
       <nav class="w-full bg-green-600 flex h-16 px-10">
         <div class="flex items-center justify-center gap-20">
