--- a/TailwindCSS/src/index.html
+++ b/TailwindCSS/src/index.html
@@ -78,7 +78,7 @@
     <main>   
       <!-- you can use different images if you want to -->
       <section class="section_images py-16">
-        <!-- i manipulated the grid-cols to set the first column to have to occupy 70% of the of its width (not the parent) 
+        <!-- i manipulated the grid-cols to set the first column to have to occupy 70% of its width (not the parent) 
           while the other column will occupy what ever is left to occupy (130% of its self [the 30 added coz the other shrunk]) -->
         <div
           class="grid max-w-5xl mx-auto grid-cols-[0.7fr_minmax(0px,1fr)] gap-3"
