--- a/TailwindCSS/src/index.html
+++ b/TailwindCSS/src/index.html
@@ -6,60 +6,56 @@
     <link href="../dist/output.css" rel="stylesheet" />
   </head>
   <body>
-    <!-- Your task is to make this website responsive from large screen to mobile screens using tailwind CSS NO custom media queries -->
     <header>
-      <nav class="w-full bg-green-600 flex h-16 px-10">
-        <div class="flex items-center justify-center gap-20">
-          <!-- change the brand name to your name -->
+      <!-- applied fixed here to make the nav stick on top -->
+      <nav class="fixed z-30 top-0 w-full bg-green-600 flex py-4 px-10">
+        <div class="md:flex items-center justify-center gap-20">
           <a href="#" class="text-slate-50 text-2xl font-semibold">BrandName</a>
-          <ul class="flex items center gap-4">
-            <li
-              class="text-slate-50 text-base font-medium hover:text-neutral-700 hover:duration-300"
-            >
-              <a href="#">Home</a>
-            </li>
-            <li
-              class="text-slate-50 text-base flex gap-2 items-center hover:text-neutral-700 hover:duration-300"
-            >
-              <a href="#">Shop</a>
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                fill="none"
-                viewBox="0 0 20 20"
-                stroke-width="2"
-                stroke="currentColor"
-                class="w-3.5 h-3.5"
+          <!-- hides on medium screens -->
+          <!-- I added a new div here to wrap the ul to manipulate how i would hide and show the menus -->
+          <div class="md:block hidden" id="nav-menu">
+            <!-- I set the flex direction to flex-row on md: this applies to > 768px and the flex-col which applies to < 768px screens -->
+            <!-- with flex direction you can manipulate the direction of your flex items, horizontal or vertical flex -->
+            <!-- see how you can apply multiple resposive designs in just one line compared to doing media queries in CSS -->
+            <ul  class="flex md:flex-row flex-col md:py-0 py-4 gap-3 items-start md:items-center md:gap-4">
+              <li
+                class="text-slate-50 text-base font-medium hover:text-neutral-700 hover:duration-300"
               >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  d="M19.5 8.25l-7.5 7.5-7.5-7.5"
-                />
-              </svg>
-            </li>
-            <li
-              class="text-slate-50 text-base font-medium hover:text-neutral-700 hover:duration-300"
-            >
-              <a href="#">About</a>
-            </li>
-            <li
-              class="text-slate-50 text-base font-medium hover:text-neutral-700 hover:duration-300"
-            >
-              <a href="#">Blog</a>
-            </li>
-            <li
-              class="text-slate-50 text-base font-medium hover:text-neutral-700 hover:duration-300"
-            >
-              <a href="#">Contact</a>
-            </li>
-            <li
-              class="text-slate-50 text-base font-medium hover:text-neutral-700 hover:duration-300"
-            >
-              <a href="#">Pages</a>
-            </li>
-          </ul>
+                <a href="#">Home</a>
+              </li>
+              <li
+                class="text-slate-50 text-base flex gap-2 items-center hover:text-neutral-700 hover:duration-300"
+              >
+                <a href="#">Shop</a>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 20 20"
+                  stroke-width="2"
+                  stroke="currentColor"
+                  class="w-3.5 h-3.5"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M19.5 8.25l-7.5 7.5-7.5-7.5"
+                  />
+                </svg>
+              </li>
+              <li
+                class="text-slate-50 text-base font-medium hover:text-neutral-700 hover:duration-300"
+              >
+                <a href="#">About</a>
+              </li>
+              <li
+                class="text-slate-50 text-base font-medium hover:text-neutral-700 hover:duration-300"
+              >
+                <a href="#">Contact</a>
+              </li>
+            </ul>
+          </div>
         </div>
-        <div class="flex gap-1 items-center ml-auto">
+        <div class="md:flex hidden gap-1 items-center ml-auto">
           <a
             href="#"
             class="text-slate-50 text-base font-medium hover:text-neutral-700 hover:duration-300"
@@ -72,16 +68,34 @@
             >Register</a
           >
         </div>
+        <!-- Mobile menu Bar - appear on medium size -->
+        <!-- hidden on > 768px screen sizes-->
+        <div class="md:hidden block ml-auto">
+          <button id="btn-collapse" onclick="toggleMenu()">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.8"
+              stroke="currentColor"
+              class="w-6 h-6 stroke-slate-50"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
+              />
+            </svg>
+          </button>
+        </div>
       </nav>
     </header>
 
-    <main>   
-      <!-- you can use different images if you want to -->
-      <section class="section_images py-16">
-        <!-- i manipulated the grid-cols to set the first column to have to occupy 70% of its width (not the parent) 
-          while the other column will occupy what ever is left to occupy (130% of its self [the 30 added coz the other shrunk]) -->
+    <main>
+      <section class="section_images py-24">
+       <!-- applied md: here -->
         <div
-          class="grid max-w-5xl mx-auto grid-cols-[0.7fr_minmax(0px,1fr)] gap-3"
+          class="px-8 grid max-w-5xl mx-auto grid-cols-1 md:grid-cols-[0.7fr_minmax(0px,1fr)] gap-4 sm:gap-3"
         >
           <div class="relative">
             <img
@@ -89,11 +103,8 @@
               alt="Furniture Image"
               class="w-full object-cover"
             />
-            <!-- notice how i use semantic HTML in this div content -->
             <div class="absolute top-7 left-7 flex flex-col gap-3">
-              <!-- I mostly use span for 1-5 words or a short sentence or subheading instead of <p>[since this is for long texts] -->
               <span class="text-sm font-bold text-green-500">5 items</span>
-              <!-- This is a title so I have to use h2 [use heading tags for titles, h1-h6] -->
               <h2 class="uppercase text-3xl font-bold text-neutral-800">
                 Furniture
               </h2>
@@ -104,16 +115,17 @@
               >
             </div>
           </div>
-          <div class="flex flex-col gap-3">
+          <div class="flex flex-col gap-4 sm:gap-3">
             <div class="relative">
               <img
                 src="./assets/images/furniture-2.jpg"
                 alt="Furniture Image"
                 class="w-full h-full object-cover"
               />
-              <div class="absolute top-7 left-7 flex flex-col gap-3">
+              <!-- applied sm:  -->
+              <div class="absolute top-5 sm:top-7 left-7 flex flex-col gap-2 sm:gap-3">
                 <span class="text-sm font-bold text-green-500">5 items</span>
-                <h2 class="uppercase text-3xl font-bold text-neutral-800">
+                <h2 class="uppercase sm:text-3xl md:text-2xl text-xl font-bold text-neutral-800">
                   Furniture
                 </h2>
                 <a
@@ -123,17 +135,8 @@
                 >
               </div>
             </div>
-  
-            <!-- I set a 100% height here [h-full] because the images weren't occupying the whole box as i expected it to do even if they have 100% height
-            i noticed that this grid container is part of the flex-box container and that's what was causing the problem, so i had to set this grid 
-            container to 100% height so that the images will inherit the height of this grid container. 
-            ( you can test that by removing the h-full or maybe changing the height to whatever you want such as h-[400px] 
-              but the image will not go lower than its ACTUAL height even if you lower it to 10px)
-  
-            if you want me to explain more about inheritance among parent and children elements then you can 
-            just ping me in discord or any topics that you want me to explain :D
-            -->
-            <div class="grid grid-cols-2 gap-3 h-full">
+            <!-- Applied sm: here -->
+            <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 sm:gap-3 h-full">
               <div class="relative">
                 <img
                   src="./assets/images/furniture-3.jpg"
@@ -142,7 +145,7 @@
                 />
                 <div class="absolute top-7 left-7 flex flex-col gap-3">
                   <span class="text-sm font-bold text-green-500">5 items</span>
-                  <h2 class="uppercase text-2xl font-bold text-neutral-800">
+                  <h2 class="uppercase text-xl sm:text-2xl font-bold text-neutral-800">
                     Furniture
                   </h2>
                   <a
@@ -160,7 +163,7 @@
                 />
                 <div class="absolute top-7 left-7 flex flex-col gap-3">
                   <span class="text-sm font-bold text-green-500">5 items</span>
-                  <h2 class="uppercase text-2xl font-bold text-neutral-800">
+                  <h2 class="uppercase text-xl sm:text-2xl font-bold text-neutral-800">
                     Furniture
                   </h2>
                   <a
@@ -174,6 +177,11 @@
           </div>
         </div>
       </section>
+
+
+      <!-- CREATE A NEW SECTION HERE FOR YOUR DAY 4 TASK -->
+      
     </main>
+    <script src="./main.js"></script>
   </body>
 </html>
