--- a/TailwindCSS/src/index.html
+++ b/TailwindCSS/src/index.html
@@ -189,6 +189,7 @@
       </section>
 
       <!-- you can delete or not, up to you -->
+      <!-- css style in the input.css file -->
       <section class="section-example">
         <span>THIS IS AN EXAMPLE</span>
       </section>
