--- a/TailwindCSS/src/index.html
+++ b/TailwindCSS/src/index.html
@@ -212,13 +212,15 @@
         <div class="container mx-auto px-16">
           <div class="grid grid-cols-1 lg:grid-cols-3 gap-24">
             <!-- grid item 1 -->
+            <!-- Removed the rest cause the code is long and they're just duplicates -->
             <div class="flex flex-col gap-10">
               <!-- flex item 1 -->
-              <div class="relative h-[450px]">
+              <!-- i set overflow-hidden so that the image doesn't scale outside this div when hovered -->
+              <div class="relative h-[450px] overflow-hidden">
                 <img
                   src="./assets/images/item1.jpg"
                   alt="Furniture Image"
-                  class="object-cover w-full h-full"
+                  class="object-cover w-full h-full hover:scale-[1.2] transition-all duration-200"
                 />
                 <span
                   class="inline-block absolute top-6 left-6 py-1 px-3 bg-red-600 rounded-md font-medium text-slate-50"
@@ -227,13 +229,13 @@
                 <!--  i used absolute to position the icons, 40px from the bottom, 50% from the left and used negative translateX to move 50% of it's self -->
                 <!-- what happened here is that 50% from left means 50% of the relative parent so it doesn't go at the exact center (u can test that out by removing translateX) 
                     so I used the negative translateX to move 50% of it's SELF (not the parent) backwards since it's negative
-                    ** This is how you center an item in an absolute postioning **
+                    ** This is how you center an item in an absolute postioning using translate **
                 -->
                 <div
                   class="flex gap-4 absolute bottom-10 left-1/2 -translate-x-1/2"
                 >
                 <!-- I wrapped the svg in a div and styled the div to get the rounded design -->
-                  <div class="bg-slate-50 p-3 rounded-full">
+                  <div class="bg-slate-50 p-3 rounded-full hover:bg-neutral-800 hover:text-slate-50 transition-all duration-200">
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       fill="none"
@@ -249,7 +251,7 @@
                       />
                     </svg>
                   </div>
-                  <div class="bg-slate-50 p-3 rounded-full">
+                  <div class="bg-slate-50 p-3 rounded-full hover:bg-neutral-800 hover:text-slate-50 transition-all duration-200">
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       fill="none"
@@ -265,7 +267,7 @@
                       />
                     </svg>
                   </div>
-                  <div class="bg-slate-50 p-3 rounded-full">
+                  <div class="bg-slate-50 p-3 rounded-full hover:bg-neutral-800 hover:text-slate-50 transition-all duration-200">
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       viewBox="0 0 24 24"
@@ -341,295 +343,13 @@
                     class="inline-block p-2.5 rounded-full bg-neutral-800"
                   ></span>
                 </div>
-                <a class="inline-flex gap-2 py-3 px-5 border border-green-700 items-center rounded-full"
-                  ><span class="font-semibold text-base text-green-700">Learn More</span
+                <a class="inline-flex gap-2 py-3 px-5 border border-green-700 items-center rounded-full hover:bg-green-700 hover:text-slate-50 transition-all duration-200"
+                  ><span class="font-semibold text-base">Learn More</span
                   ><svg
                     xmlns="http://www.w3.org/2000/svg"
                     viewBox="0 0 24 24"
                     fill="currentColor"
-                    class="w-5 h-5 fill-green-700"
-                  >
-                    <path
-                      fill-rule="evenodd"
-                      d="M16.28 11.47a.75.75 0 010 1.06l-7.5 7.5a.75.75 0 01-1.06-1.06L14.69 12 7.72 5.03a.75.75 0 011.06-1.06l7.5 7.5z"
-                      clip-rule="evenodd"
-                    />
-                  </svg>
-                </a>
-              </div>
-            </div>
-            <!-- grid item 2 -->
-            <div class="flex flex-col gap-10">
-              <!-- flex item 1 -->
-              <div class="relative h-[450px]">
-                <img
-                  src="./assets/images/item2.jpg"
-                  alt="Furniture Image"
-                  class="object-cover w-full h-full"
-                />
-                <span
-                  class="inline-block absolute top-6 left-6 py-1 px-3 bg-red-600 rounded-md font-medium text-slate-50"
-                  >Sale</span
-                >
-                <div
-                  class="flex gap-4 absolute bottom-10 left-1/2 -translate-x-1/2"
-                >
-                  <div class="bg-slate-50 p-3 rounded-full">
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      fill="none"
-                      viewBox="0 0 24 24"
-                      stroke-width="1.5"
-                      stroke="currentColor"
-                      class="w-6 h-6"
-                    >
-                      <path
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                        d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z"
-                      />
-                    </svg>
-                  </div>
-                  <div class="bg-slate-50 p-3 rounded-full">
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      fill="none"
-                      viewBox="0 0 24 24"
-                      stroke-width="1.5"
-                      stroke="currentColor"
-                      class="w-6 h-6"
-                    >
-                      <path
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                        d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12z"
-                      />
-                    </svg>
-                  </div>
-                  <div class="bg-slate-50 p-3 rounded-full">
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      viewBox="0 0 24 24"
-                      fill="currentColor"
-                      class="w-6 h-6"
-                    >
-                      <path d="M12 15a3 3 0 100-6 3 3 0 000 6z" />
-                      <path
-                        fill-rule="evenodd"
-                        d="M1.323 11.447C2.811 6.976 7.028 3.75 12.001 3.75c4.97 0 9.185 3.223 10.675 7.69.12.362.12.752 0 1.113-1.487 4.471-5.705 7.697-10.677 7.697-4.97 0-9.186-3.223-10.675-7.69a1.762 1.762 0 010-1.113zM17.25 12a5.25 5.25 0 11-10.5 0 5.25 5.25 0 0110.5 0z"
-                        clip-rule="evenodd"
-                      />
-                    </svg>
-                  </div>
-                </div>
-              </div>
-              <!-- flex item 2 -->
-              <div class="w-full px-9">
-                <div class="flex justify-between">
-                  <span class="font-semibold text-orange-600 text-base"
-                    >English</span
-                  >
-                  <div
-                    class="py-1 px-3 rounded-full bg-neutral-800 flex gap-1 items-center"
-                  >
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      viewBox="0 0 24 24"
-                      fill="currentColor"
-                      class="w-5 h-5 fill-yellow-500"
-                    >
-                      <path
-                        fill-rule="evenodd"
-                        d="M10.788 3.21c.448-1.077 1.976-1.077 2.424 0l2.082 5.007 5.404.433c1.164.093 1.636 1.545.749 2.305l-4.117 3.527 1.257 5.273c.271 1.136-.964 2.033-1.96 1.425L12 18.354 7.373 21.18c-.996.608-2.231-.29-1.96-1.425l1.257-5.273-4.117-3.527c-.887-.76-.415-2.212.749-2.305l5.404-.433 2.082-5.006z"
-                        clip-rule="evenodd"
-                      />
-                    </svg>
-                    <span class="text-slate-50 text-base">4.9</span>
-                  </div>
-                </div>
-                <h3 class="font-semibold text-lg mb-3">Graphics Design</h3>
-                <p class="text-base text-neutral-500 mb-3">
-                  We focus on ergonomics and meeting you...
-                </p>
-                <div class="flex gap-1 items-center mb-4">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    viewBox="0 0 24 24"
-                    fill="currentColor"
-                    class="w-5 h-5 fill-neutral-500"
-                  >
-                    <path
-                      fill-rule="evenodd"
-                      d="M12 2.25a.75.75 0 01.75.75v11.69l3.22-3.22a.75.75 0 111.06 1.06l-4.5 4.5a.75.75 0 01-1.06 0l-4.5-4.5a.75.75 0 111.06-1.06l3.22 3.22V3a.75.75 0 01.75-.75zm-9 13.5a.75.75 0 01.75.75v2.25a1.5 1.5 0 001.5 1.5h13.5a1.5 1.5 0 001.5-1.5V16.5a.75.75 0 011.5 0v2.25a3 3 0 01-3 3H5.25a3 3 0 01-3-3V16.5a.75.75 0 01.75-.75z"
-                      clip-rule="evenodd"
-                    />
-                  </svg>
-                  <span class="font-semibold text-neutral-500 inline-block"
-                    >15 sales</span
-                  >
-                </div>
-                <div class="flex gap-2 mb-4">
-                  <span
-                    class="inline-block p-2.5 rounded-full bg-blue-500"
-                  ></span>
-                  <span
-                    class="inline-block p-2.5 rounded-full bg-green-700"
-                  ></span>
-                  <span
-                    class="inline-block p-2.5 rounded-full bg-orange-600"
-                  ></span>
-                  <span
-                    class="inline-block p-2.5 rounded-full bg-neutral-800"
-                  ></span>
-                </div>
-                <a class="inline-flex gap-2 py-3 px-5 border border-green-700 items-center rounded-full"
-                  ><span class="font-semibold text-base text-green-700">Learn More</span
-                  ><svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    viewBox="0 0 24 24"
-                    fill="currentColor"
-                    class="w-5 h-5 fill-green-700"
-                  >
-                    <path
-                      fill-rule="evenodd"
-                      d="M16.28 11.47a.75.75 0 010 1.06l-7.5 7.5a.75.75 0 01-1.06-1.06L14.69 12 7.72 5.03a.75.75 0 011.06-1.06l7.5 7.5z"
-                      clip-rule="evenodd"
-                    />
-                  </svg>
-                </a>
-              </div>
-            </div>
-            <!-- grid item 3 -->
-            <div class="flex flex-col gap-10">
-              <!-- flex item 1 -->
-              <div class="relative h-[450px]">
-                <img
-                  src="./assets/images/item3.jpg"
-                  alt="Furniture Image"
-                  class="object-cover w-full h-full"
-                />
-                <span
-                  class="inline-block absolute top-6 left-6 py-1 px-3 bg-red-600 rounded-md font-medium text-slate-50"
-                  >Sale</span
-                >
-                <div
-                  class="flex gap-4 absolute bottom-10 left-1/2 -translate-x-1/2"
-                >
-                  <div class="bg-slate-50 p-3 rounded-full">
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      fill="none"
-                      viewBox="0 0 24 24"
-                      stroke-width="1.5"
-                      stroke="currentColor"
-                      class="w-6 h-6"
-                    >
-                      <path
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                        d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z"
-                      />
-                    </svg>
-                  </div>
-                  <div class="bg-slate-50 p-3 rounded-full">
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      fill="none"
-                      viewBox="0 0 24 24"
-                      stroke-width="1.5"
-                      stroke="currentColor"
-                      class="w-6 h-6"
-                    >
-                      <path
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                        d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12z"
-                      />
-                    </svg>
-                  </div>
-                  <div class="bg-slate-50 p-3 rounded-full">
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      viewBox="0 0 24 24"
-                      fill="currentColor"
-                      class="w-6 h-6"
-                    >
-                      <path d="M12 15a3 3 0 100-6 3 3 0 000 6z" />
-                      <path
-                        fill-rule="evenodd"
-                        d="M1.323 11.447C2.811 6.976 7.028 3.75 12.001 3.75c4.97 0 9.185 3.223 10.675 7.69.12.362.12.752 0 1.113-1.487 4.471-5.705 7.697-10.677 7.697-4.97 0-9.186-3.223-10.675-7.69a1.762 1.762 0 010-1.113zM17.25 12a5.25 5.25 0 11-10.5 0 5.25 5.25 0 0110.5 0z"
-                        clip-rule="evenodd"
-                      />
-                    </svg>
-                  </div>
-                </div>
-              </div>
-              <!-- flex item 2 -->
-              <div class="w-full px-9">
-                <div class="flex justify-between">
-                  <span class="font-semibold text-orange-600 text-base"
-                    >English</span
-                  >
-                  <div
-                    class="py-1 px-3 rounded-full bg-neutral-800 flex gap-1 items-center"
-                  >
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      viewBox="0 0 24 24"
-                      fill="currentColor"
-                      class="w-5 h-5 fill-yellow-500"
-                    >
-                      <path
-                        fill-rule="evenodd"
-                        d="M10.788 3.21c.448-1.077 1.976-1.077 2.424 0l2.082 5.007 5.404.433c1.164.093 1.636 1.545.749 2.305l-4.117 3.527 1.257 5.273c.271 1.136-.964 2.033-1.96 1.425L12 18.354 7.373 21.18c-.996.608-2.231-.29-1.96-1.425l1.257-5.273-4.117-3.527c-.887-.76-.415-2.212.749-2.305l5.404-.433 2.082-5.006z"
-                        clip-rule="evenodd"
-                      />
-                    </svg>
-                    <span class="text-slate-50 text-base">4.9</span>
-                  </div>
-                </div>
-                <h3 class="font-semibold text-lg mb-3">Graphics Design</h3>
-                <p class="text-base text-neutral-500 mb-3">
-                  We focus on ergonomics and meeting you...
-                </p>
-                <div class="flex gap-1 items-center mb-4">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    viewBox="0 0 24 24"
-                    fill="currentColor"
-                    class="w-5 h-5 fill-neutral-500"
-                  >
-                    <path
-                      fill-rule="evenodd"
-                      d="M12 2.25a.75.75 0 01.75.75v11.69l3.22-3.22a.75.75 0 111.06 1.06l-4.5 4.5a.75.75 0 01-1.06 0l-4.5-4.5a.75.75 0 111.06-1.06l3.22 3.22V3a.75.75 0 01.75-.75zm-9 13.5a.75.75 0 01.75.75v2.25a1.5 1.5 0 001.5 1.5h13.5a1.5 1.5 0 001.5-1.5V16.5a.75.75 0 011.5 0v2.25a3 3 0 01-3 3H5.25a3 3 0 01-3-3V16.5a.75.75 0 01.75-.75z"
-                      clip-rule="evenodd"
-                    />
-                  </svg>
-                  <span class="font-semibold text-neutral-500 inline-block"
-                    >15 sales</span
-                  >
-                </div>
-                <div class="flex gap-2 mb-4">
-                  <span
-                    class="inline-block p-2.5 rounded-full bg-blue-500"
-                  ></span>
-                  <span
-                    class="inline-block p-2.5 rounded-full bg-green-700"
-                  ></span>
-                  <span
-                    class="inline-block p-2.5 rounded-full bg-orange-600"
-                  ></span>
-                  <span
-                    class="inline-block p-2.5 rounded-full bg-neutral-800"
-                  ></span>
-                </div>
-                <a class="inline-flex gap-2 py-3 px-5 border border-green-700 items-center rounded-full"
-                  ><span class="font-semibold text-base text-green-700">Learn More</span
-                  ><svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    viewBox="0 0 24 24"
-                    fill="currentColor"
-                    class="w-5 h-5 fill-green-700"
+                    class="w-5 h-5"
                   >
                     <path
                       fill-rule="evenodd"
