--- a/TailwindCSS/src/index.html
+++ b/TailwindCSS/src/index.html
@@ -343,7 +343,7 @@
                     class="inline-block p-2.5 rounded-full bg-neutral-800"
                   ></span>
                 </div>
-                <a class="inline-flex gap-2 py-3 px-5 border border-green-700 items-center rounded-full hover:bg-green-700 hover:text-slate-50 transition-all duration-200"
+                <a class="inline-flex gap-2 py-3 px-5 border border-green-700 items-center rounded-full hover:bg-green-700 hover:text-slate-50 text-green-700 transition-all duration-200"
                   ><span class="font-semibold text-base">Learn More</span
                   ><svg
                     xmlns="http://www.w3.org/2000/svg"
