--- a/TailwindCSS/src/index.html
+++ b/TailwindCSS/src/index.html
@@ -210,7 +210,7 @@
           </p>
         </div>
         <div class="container mx-auto px-16">
-          <div class="grid grid-cols-1 lg:grid-cols-3 gap-24">
+          <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-24">
             <!-- grid item 1 -->
             <!-- Removed the rest cause the code is long and they're just duplicates -->
             <div class="flex flex-col gap-10">
